# hremap

./: Cargo.toml  config.yaml.example  install.sh
assets/: kwin-watcher.js
assets/focused-window-dbus@hremap/: extension.js  metadata.json
focused-window-dbus@hremap/: extension.js  metadata.json
src/: main.rs
src/actions/: app_volume.rs  launch.rs  mod.rs  system_volume.rs  utils.rs
src/config/: mod.rs  parser.rs  raw.rs  resolved.rs  runtime.rs  utils.rs
src/input/: mod.rs  utils.rs
src/io/: emit.rs  global.rs  handle_action.rs  handler.rs  input.rs  mod.rs  output.rs  types.rs  utils.rs
src/utils/: compute_modifier_index.rs  is_modifier_key.rs  mod.rs
src/watcher/: gnome.rs  kde.rs  mod.rs  types.rs
